--- a/2. Progress Steps/index.html
+++ b/2. Progress Steps/index.html
@@ -13,14 +13,13 @@
     <div class="container">
         <div class="progress-container">
             <div class="progress" id="progress"></div>
-            <div class="circle active">1</div>
-            <div class="circle">2</div>
-            <div class="circle">3</div>
-            <div class="circle">4</div>
-
+            <div class="circle active" data-value="1">1</div>
+            <div class="circle" data-value="2">2</div>
+            <div class="circle" data-value="3">3</div>
+            <div class="circle" data-value="4">4</div>
         </div>
-        <button class="btn" id="prev" disabled>Prev</button>
-        <button class="btn" id="next">Next</button>
+        <button class="btn " id="prev" disabled>Prev</button>
+        <button class="btn " id="next">Next</button>
     </div>
 
 
